[gd_scene load_steps=9 format=2]

[ext_resource path="res://Src/Cabinet/Cabinet.gd" type="Script" id=1]
[ext_resource path="res://Assets/Loot/Locker.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/MenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/SFX/chest_bounty.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/key_pickup.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/chest_locked.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "loot"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -16, -32 ), Vector2( -16, -32 ), Vector2( -16, -64 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 16 )

[node name="Locker" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 3
position = Vector2( 4, -16 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -16.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = -18.0
rect_pivot_offset = Vector2( 24, 14 )
custom_fonts/font = ExtResource( 3 )
text = "$20"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LootAnim" type="AnimationPlayer" parent="."]
anims/loot = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4, -16 )
shape = SubResource( 2 )

[node name="ChestSounds" type="Node2D" parent="."]

[node name="Locked" type="AudioStreamPlayer2D" parent="ChestSounds"]
stream = ExtResource( 6 )
attenuation = 2.0
bus = "Sound"

[node name="HasBounty" type="AudioStreamPlayer2D" parent="ChestSounds"]
stream = ExtResource( 4 )
attenuation = 2.0
bus = "Sound"

[node name="KeyPickup" type="AudioStreamPlayer" parent="ChestSounds"]
stream = ExtResource( 5 )
bus = "Sound"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
